--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   lottie:
   firebase_storage: ^11.6.0
   path: ^1.8.2
+  cloud_firestore: ^4.14.0
+  image_network: ^2.5.2
+  firebase_auth: ^4.16.0
+  flutter_spinkit: ^5.2.1
+  cached_network_image: ^3.2.3
+  url_launcher: ^6.1.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
